- just one "copy" instead of "copy" and "copy as text"
- insertion of series supports now doubles and decreasing series
- support for inserting data from SQL databases
- implemented "Goal Seek"
- implemented new shortcuts for cell formating 
- implemented "Insert from text file" and "Insert formated clipboard data"
- Added "Text to Column"
- improved Data Consolidate, with more choices: Sum, Average, Count,
  Min, Max, Product, Standard Deviation, Variance.
- fixed some functions to be Excel-compatibel (FIND, REPLACE,LEFT,
  RIGHT,MID,REPT)
- now it's "Sheet" everywhere, not more "Table" :-)
- added formula indicator (small blue rectangle on the corner,
  when the cell holds a formula). idea from Quattro Pro
- added Greek to EURO() function
- new function category: Engineering
- added support with templates

new functions added:
 ISBLANK, CHAR, CODE, VALUE, DOLLAR, CONCATENATE, FIXED, T, TEXT, SUBSTITUTE,
 SEARCH, INFO, FILENAME, TYPE, COUNTBLANK, N, AVEDEV, ARABIC, AVERAGEA, ROT,
 FIB, BASE, FACTDOUBLE, SQRTPI, QUOTIENT, MULTINOMIAL, COUNTIF

Until beta1:
------------

- bug fixes :-)
- performance enhancements
- support up to 2^15 columns and rows, formerly it was 676 columns and 10000
  rows

- add support for spell-check
- many new built-in functions (see detailed list below)
- function name is now case-insensitive
- "Related Function" in formula editor
- move functions in kspread_interpreter into several kspread_functions_*.cc

New functions added:
 conversion:
   INT2BOOL, CharToAscii, AsciiToChar, BOOL2STRING, NUM2STRING,
   BOOL2INT
 math:
   DIV, LCD, PRODUCT, LCM, TOGGLE, TRIM, ABS
 text:
   COMPARE, CLEAN, SLEEK, PROPER, REPLACE
 date/time:
   DAYS, WEEKS, MONTHS, YEARS
 financial:
   DB, SLN, SYD, EURO
 logical:
   XOR
 statistical:
   CHIDIST, FDIST, TDIST, CONFIDENCE, BETADIST, GAMMADIST, 
   PHI, GAUSS, MEDIAN, POISSON, GAMMALN, NORMINV, NORMSINV, 
   WEIBULL, EXPONDIST, NORMDIST, NORMSDIST, FISHER, 
   FISHERINV, LOGNORMDIST
  